--- a/views/home.ejs
+++ b/views/home.ejs
@@ -12,7 +12,7 @@
             </div>
         </div>
         <div class="col-lg-6" style="padding: 0mm;">
-            <img class="img-fluid"  src="\resources\hand2.png" alt="">
+            <img class="img-fluid"  src="https://images.unsplash.com/photo-1611599537845-1c7aca0091c0?ixid=MnwxMjA3fDB8MHxzZWFyY2h8OXx8ZGlzaHxlbnwwfHwwfHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=60" alt="">
         </div>
     </div>
 </section>
@@ -45,12 +45,12 @@
             </div>
         </div>
         <div class="col-md-6">
-            <img src="\resources\milk.png" alt="" class="img-fluid">
+            <img src="https://images.unsplash.com/photo-1577805947697-89e18249d767?ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8c2hha2VzfGVufDB8fDB8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=60" alt="" class="img-fluid">
         </div>
     </div>
     <div class="row align-items-center content">
         <div class="col-md-6 order-2 order-md-1">
-            <img src="https://theculturetrip.com/wp-content/uploads/2018/03/2009609.jpg" alt="" class="img-fluid">
+            <img src="https://images.unsplash.com/photo-1574936145840-28808d77a0b6?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MjJ8fHJlc3RhdXJhbnR8ZW58MHx8MHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=60" alt="" class="img-fluid">
         </div>
         <div class="col-md-6 text-center order-1 order-md-2">
             <div class="row justify-content-center">
