--- a/public/stylesheet/landingmain.css
+++ b/public/stylesheet/landingmain.css
@@ -1,6 +1,6 @@
 body {
     /* background-image: url("https://images.unsplash.com/photo-1534766438357-2b270dbd1b40?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=334&q=80"); */
-       background-image: url("https://images.wallpaperscraft.com/image/blueberries_cups_berries_150713_1920x1080.jpg");
+       /*background-image: url("https://images.wallpaperscraft.com/image/blueberries_cups_berries_150713_1920x1080.jpg");*/
        /* https://images.unsplash.com/photo-1529767367174-535729449d71?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=750&q=80 */
        font-family: "Nunito", sans-serif;
     height: 100%;
@@ -8,8 +8,8 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
     background-position: stretch;
-    
-}
+    background-image: url('../resources/patrick-tomasso-GXXYkSwndP4-unsplash.jpg');  
+  }
 #big{
     font-weight: bold;
     font-size: 5rem;
