--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -18,7 +18,7 @@
                                 <% } %>
                               <h3><strong><%=data.title%></strong></h3>
                               
-                              <p><%-data.description.substring(0,200)%></p>
+                              <p><%-data.description.substring(0,200)%>..</p>
                               <p>Price : $<%=data.price%></p>
                               <p><a style="margin-bottom: 10px;"href="/menu/<%=data._id%>">VIEW MORE</a></p>
                            
