MADE A PWA AND ADDED INBUILT AR VR GRAPHICS

--- a/public/views/adddish.ejs
+++ b/public/views/adddish.ejs
@@ -1,4 +1,4 @@
-<%- include("partials/header.ejs") %>
+<%- include("./header.ejs") %>
 <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css">
 <style>
 body {
@@ -44,4 +44,4 @@ body {
     
     
 </form>
-<%- include("partials/footer.ejs") %>
+<%- include("./footer.ejs") %>
