--- a/public/views/about.ejs
+++ b/public/views/about.ejs
@@ -1,4 +1,4 @@
-<%- include("partials/header.ejs") %>
+<%- include("./header.ejs") %>
 <link rel="stylesheet" href="/stylesheet/about.css">
 <body>
 
@@ -51,4 +51,4 @@
     
     
     </body>
-<%- include("partials/footer.ejs") %>
+<%- include("./footer.ejs") %>
