--- a/public/views/contact.ejs
+++ b/public/views/contact.ejs
@@ -1,4 +1,4 @@
-<%- include("partials/header.ejs") %>
+<%- include("./header.ejs") %>
 <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css">
 <style>
 body {
@@ -32,4 +32,4 @@ body {
 </div>
 
 
-<%- include("partials/footer.ejs") %>
+<%- include("./footer.ejs") %>
