--- a/public/views/home.ejs
+++ b/public/views/home.ejs
@@ -1,5 +1,5 @@
 
-<%- include("partials/header.ejs") %>
+<%- include("./header.ejs") %>
 <section class="container-fluid px-0">
     <div class="row align-items-center">
         <div class="col-lg-6">
@@ -63,4 +63,4 @@
         </div>
     </div>
 </section>
-<%- include("partials/footer.ejs") %>
+<%- include("./footer.ejs") %>
