--- a/public/views/userregister.ejs
+++ b/public/views/userregister.ejs
@@ -1,4 +1,5 @@
-<%- include("partials/header.ejs") %>
+
+<%- include("./header.ejs") %>
 <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css">
 <style>
 body {
@@ -8,10 +9,9 @@ body {
 </style>
 <div class="container text-center" style="margin:0,auto;margin-top:10%;">
     <div class="jumbotron">
-      <h2 style= "font-family: Nunito;">LOGIN TO CONTINUE</h2>
-      <h4 style= "font-family: Nunito;"><a href="/userregister">NOT A USER? CLICK HERE TO SIGN UP</a></h4>
+      <h2 style= "font-family: Nunito;">REGISTER TO CONTINUE</h2>
     </div>
-<form action="/userlogin" method="POST">
+<form action="/userregister" method="POST">
     <div class="ui main text container segment">
         
         <form class="ui form">
@@ -20,8 +20,12 @@ body {
                 <input type="text" placeholder="username" name="username">
             </div>
             <div class=field>
-                <label for="querry">PASSWORD:</label>
+                <label for="password">PASSWORD:</label>
                 <input type="password" placeholder="password" name="password">
+               </div>
+               <div class=field>
+                <label for="code">admin code:</label>
+                <input type="password" placeholder="admin code" name="admincode">
                </div>
               
             <input class="ui violet inverted button"type="submit">
@@ -32,4 +36,4 @@ body {
     
     
 </form>
-<%- include("partials/footer.ejs") %>
+<%- include("./footer.ejs") %>
