--- a/public/views/viewmore.ejs
+++ b/public/views/viewmore.ejs
@@ -1,4 +1,4 @@
-<%- include("partials/header.ejs") %>
+<%- include("./header.ejs") %>
 <div class="container" style="margin-top: 3%">
     <div class="row" style="justify-content: center;">
         <div class="col-md-9 text-center ">
@@ -47,4 +47,4 @@
 <br>
 <br>
 
-<%- include("partials/footer.ejs") %>
+<%- include("./footer.ejs") %>
