added space for maps api

--- a/public/views/landing.ejs
+++ b/public/views/landing.ejs
@@ -1,9 +1,14 @@
 <%- include("./header.ejs") %>
 <link rel="stylesheet" href="\stylesheet\landingmain.css">
+<div id="cont" height="100px" width="100px">
+    <img id="qr" src="../qrcode_8230354_ (2).png" height="100px" width="100px" />
+</div>
+
 
 <div class="content">
-    <p id="big"><i class="fas fa-quote-left"></i>  El Chico  <i class="fas fa-quote-right"></i></p>
+    <p id="big" class="h1"><i class="fas fa-quote-left"></i>  El Chico  <i class="fas fa-quote-right"></i></p>
     <p id="font">---We speak the good food language---</p>
-    
+   
+
 </div>
 <%- include("./footer.ejs") %>
