--- a/public/stylesheet/landingmain.css
+++ b/public/stylesheet/landingmain.css
@@ -2,24 +2,16 @@ body {
        font-family: "Nunito", sans-serif;
     height: 100%;
     margin: 0;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: stretch;
+    width: 100%;
+    height: 400px;
     background-image: url('../resources/patrick-tomasso-GXXYkSwndP4-unsplash.jpg');  
-    
-     
+    background-size: 100%;
     
   }
 
-#big{
-    font-weight: bold;
-    font-size: 5rem;
 
-}
 .content button:hover{
-  background-color:  #e94747;
-
-  
+  background-color:  rgb(233, 71, 71);
 }
 
     
@@ -47,4 +39,13 @@ body {
     font-family: "Nunito", sans-serif;
     color:#f7d4d4;
     background-color:  rgba(0, 0, 0, 0.5);
+  }
+
+  #qr{
+    position: absolute;
+    top: 0px;
+    right: 0px;
+  }
+  #cont{
+    position: relative;
   }
