--- a/public/views/contact.ejs
+++ b/public/views/contact.ejs
@@ -2,8 +2,12 @@
 <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css">
 <style>
 body {
-    background: #f5d9d5;
-    font-family: "Nunito", sans-serif;
+    height: 100%;
+    margin: 0;
+    width: 100%;
+    height: 400px;
+    background-image: url('../resources/patrick-tomasso-GXXYkSwndP4-unsplash.jpg');  
+    background-size: 100%;
 }
 </style>
 
