--- a/public/views/adddish.ejs
+++ b/public/views/adddish.ejs
@@ -12,7 +12,7 @@ body {
 </style>
 <div class="container text-center" style="margin:0,auto;margin-top:10%;">
     <div class="jumbotron">
-      <h2 style= "font-family: Nunito;">REGISTER TO CONTINUE</h2>
+      <h2 style= "font-family: Nunito;">ADD A NEW DISH</h2>
     </div>
 <form action="/menu/adddish" method="POST">
     <div class="ui main text container segment">
