added 3d model on landing page

--- a/public/views/landing.ejs
+++ b/public/views/landing.ejs
@@ -1,14 +1,21 @@
 <%- include("./header.ejs") %>
 <link rel="stylesheet" href="\stylesheet\landingmain.css">
+
 <div id="cont" height="100px" width="100px">
+    
     <img id="qr" src="../qrcode_8230354_ (2).png" height="100px" width="100px" />
+    
 </div>
+
 
 
 <div class="content">
+    <div class="sketchfab-embed-wrapper"> <iframe title="FishSoup_Pot" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" allow="autoplay; fullscreen; xr-spatial-tracking" xr-spatial-tracking execution-while-out-of-viewport execution-while-not-rendered web-share src="https://sketchfab.com/models/5a39e8c683f946b1aeb848dd2e88deb8/embed"> </iframe> </div>
+    
     <p id="big" class="h1"><i class="fas fa-quote-left"></i>  El Chico  <i class="fas fa-quote-right"></i></p>
     <p id="font">---We speak the good food language---</p>
-   
+
 
 </div>
+
 <%- include("./footer.ejs") %>
