--- a/public/stylesheet/landingmain.css
+++ b/public/stylesheet/landingmain.css
@@ -8,7 +8,11 @@ body {
     background-size: 100%;
     
   }
-
+  .add-button {
+    position: absolute;
+    top: 1px;
+    left: 1px;
+  }
 
 .content button:hover{
   background-color:  rgb(233, 71, 71);
